# agent

./: .gitignore  pyproject.toml
coder/: pyproject.toml
coder/src/coder/: crew.py  main.py
debate/: pyproject.toml
debate/output/: decide.md  oppose.md  propose.md
debate/src/debate/: crew.py  main.py
finincial_researcher/: README.md  pyproject.toml
finincial_researcher/output/: report.md
finincial_researcher/src/finincial_researcher/: crew.py  main.py
foundations/: 1_lab1.ipynb  app.ipynb  wee2.ipynb  week1.ipynb  week3.ipynb  week4.ipynb  week6.ipynb
stock_picker/: pyproject.toml
stock_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
stock_picker/output/: decision.md  research_report.json  trending_companies.json
stock_picker/src/stock_picker/: main.py
